Add Modern Calculator to apps.json

--- a/apps.json
+++ b/apps.json
@@ -3,5 +3,10 @@
     "name": "Ultimate QR Generator",
     "version": "1.0",
     "apk": "https://raw.githubusercontent.com/UTR-ShadowHex/my-apk-store/main/Ultimate%20QR%20Generator.apk"
+  },
+  {
+    "name": "Modern Calculator",
+    "version": "1.0",
+    "apk": "https://raw.githubusercontent.com/UTR-ShadowHex/my-apk-store/main/Modern%20Calculator%20(1).apk"
   }
 ]
